--- a/Assignment1_NgoDongquan/appsettings.json
+++ b/Assignment1_NgoDongquan/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local);Database=FUNewsManagement;uid=sa;Password=sa;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "Key": "0hzLWZVLZSh5F5E6hbGCN1JB6muPJIrD"
   }
 }
